--- a/style.css
+++ b/style.css
@@ -1,1 +1,116 @@
+*{
+    box-sizing: border-box;
+    padding:0px;
+    margin:0px;
+    }
+    /* navar */
+    .navbar-1{
+    background-color: #0F1111;
+    width:100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    /* margin-left: 10px; */
+    }
+    /* menu-1 */
+    .menu-1{
+        padding: 3px 6px 3px 4px;
+        margin:1px;
+        border-radius: 2px;
+        color:#007185;
+        width:auto;
+        height:auto;
+        font: 14px "Amazon Ember",Arial,sans-serif;
+        position: relative;
+        left:10px;
+    }
+    .menu-1:hover{
+        padding: 3px 6px 3px 4px;
+        margin:1px;
+        border-radius: 2px;
+         border:1px solid #FFFFFF;
+        color:#007185;
+        width:auto;
+        height:auto;
+        font: 14px "Amazon Ember",Arial,sans-serif;
+        position: relative;
+        left:10px; 
+    }
+    /* menu2 */
+    .menu-2{
+        display: flex;
+        position: relative;
+        align-items: center;
+        left:20px;
+        height: 50px;
+        width: auto;
+        padding-left: 4px;
+        padding-right: 4px;
+       background-color:#191b1b;
+    }
+    .menu-2:hover{
+        display: flex;
+        position: relative;
+        left:20px;
+        border:1px solid #FFFFFF;
+        border-radius: 2px;
+    }
+    .navchild{
+        position: relative;
+        top:10px;
+    }
+    .navchild2 p,h4{
+        color: #FFFFFF;
+        font: 14px "Amazon Ember",Arial,sans-serif;
+    }
+    .navchild2 p{
+        font-size:12px;
+    }
+    .navchild2 h4{
+        font-weight: bold;
+    }
+    /* menu-3 */
+    .menu-3{
+        display: flex;
+        align-items: center;
+        position: relative;
+        left:40px;
+    }
+    .searchbar-1{
+    height:40px;
+    width:55px;
+    background-color: #F3F3F3;
+    text-align: center;
+    color:#0F1111;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    font: 14px "Amazon Ember",Arial,sans-serif;
+    border-top-left-radius:4px;
+    border-bottom-left-radius: 4px;
+    }
+    .arr{
+        margin-left: 5px;
+    }
+    .searchbar-2 input{
+        width:552.3px;
+        height:40px;
+        background-color: #FFFFFF;
+        border:none;
+        
+    }
+    .searchbar-2 input:focus, textarea:focus, select:focus{
+        outline: none;
+    }
+    .searchbar-3 button{
+        width: 45px;
+        height: 40px;
+        background-color: #eea538;
+        border-top-right-radius:4px;
+        border-bottom-right-radius: 4px;
+        border:none;
+    }
+    
 
+    
+    
