--- a/style.css
+++ b/style.css
@@ -3,19 +3,20 @@
     padding:0px;
     margin:0px;
     }
+    body {
+        overflow-y: scroll; /* Show vertical scrollbar */
+        /* overflow-x: scroll; Show horizontal scrollbar */
+      }
     /* navar */
     .navbar-1{
-    background-color: #0F1111;
+    background-color: #131A22;
     width:100%;
     height: 60px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
     }
-    body {
-        overflow-y: scroll; /* Show vertical scrollbar */
-        /* overflow-x: scroll; Show horizontal scrollbar */
-      }
+    
     /* menu-1 */
     .menu-1{
         width:129px;
@@ -24,7 +25,7 @@
         align-items: center;
         justify-content: center;
         font: 14px "Amazon Ember",Arial,sans-serif;
-        background-color:#0F1111 ;
+        background-color:#131A22 ;
         /* position: relative;
         left:10px; */
         /* margin-left:10px; */
@@ -37,7 +38,7 @@
         justify-content: center;
         border:1px solid #FFFFFF;
         border-radius: 2px;
-        background-color:#0F1111 ;
+        background-color:#131A22 ;
         font: 14px "Amazon Ember",Arial,sans-serif;
         /* position: relative;
         left:10px; */
@@ -54,7 +55,7 @@
         /* margin-left:20px; */
         height: 50px;
         width: 170px;
-       background-color:#0F1111;
+       background-color:#131A22;
       
     }
     .menu-2:hover{
@@ -65,7 +66,7 @@
         /* left:20px; */
         height: 50px;
         width: 170px;
-       background-color:#0F1111;
+       background-color:#131A22;
        outline: 1px solid #FFFFFF;
        border-radius: 2px;
     }
@@ -266,7 +267,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0F1111;
+    background-color: #131A22;
     /* position: relative;
     left:60px; */
 }
@@ -277,7 +278,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #0F1111;
+    background-color: #131A22;
     /* position: relative;
     left:60px; */
     border: 1px solid #FFFFFF;
